# MailTube

./: .dockerignore  .env.example  .gitignore  .trivyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compose.yml  constraints.txt  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  provider.yml  setup.yml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  release.yml  security.yml
apps/web/: next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-shell.tsx  auth-gate.tsx  convert-screen.tsx  converter-workbench.tsx  health-screen.tsx  history-screen.tsx  job-details-drawer.tsx  job-row.tsx  protected-shell.tsx  queue-rail.tsx  settings-screen.tsx  theme-toggle.tsx
apps/web/hooks/: use-jobs.ts
apps/web/lib/: api.ts  auth-navigation.ts  (+1 more)
docker/: empty-cookies.txt
docs/: architecture.md  backup-restore.md  configuration.md  development.md  docker-compose.md  email-syntax.md  generic-email.md  gmail.md  installation.md  privacy-retention.md  raspberry-pi.md  release-policy.md  security.md  setup.example.json  storage-minio.md  storage-r2.md  storage-s3.md  tailscale.md  troubleshooting-ytdlp.md  updates.md
docs/adr/: 0001-single-container-static-web.md
docs/design/: design-system.md
scripts/: install-updater.sh  install.ps1  install.sh  update.ps1  update.sh
src/mailtube/: __init__.py  __main__.py  cli.py  config.py  db.py
tests/: test_api.py  test_config.py  test_database.py  test_downloader.py  test_email_service.py  test_installer.py  test_parser.py  test_release_workflows.py  test_runtime_secrets.py  test_setup.py
(+28 files in other folders)
