[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mailtube"
version = "1.0.2"
description = "A self-hosted YouTube-to-file service for web and email workflows"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "AGPL-3.0-only"
authors = [{ name = "MailTube contributors" }]
dependencies = [
  "argon2-cffi>=25.1,<26",
  "bgutil-ytdlp-pot-provider==1.3.1",
  "boto3>=1.42,<2",
  "fastapi>=0.137,<0.138",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.12,<3",
  "python-multipart>=0.0.22,<0.1",
  "textual>=6.6,<7",
  "uvicorn[standard]>=0.40,<0.41",
  "yt-dlp[default]==2026.6.9",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "mypy>=1.19,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.15,<0.16",
]

[project.scripts]
mailtube = "mailtube.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mailtube"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = [
  "ASYNC240", # pathlib calls are explicitly moved off-loop where they can block
  "B008",     # FastAPI's Depends/Header declarations intentionally call constructors
  "E501",     # formatter owns layout; long protocol strings remain readable
  "S101",     # assertions are expected in tests and subprocess invariants
]

[tool.ruff.lint.per-file-ignores]
"src/mailtube/setup/wizard.py" = ["S104"]
"tests/**" = ["S105", "S106"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mailtube"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
